adding patch files to git so they won't get lost