@@ -2,7 +2,7 @@
 
 set -e
 
-# VERSION=$(grep -Po '(?<=Idea=).*' ../../../../version.properties)
+VERSION=223.7571.182
 TARGET=../../../../target
 
 #curl https://raw.githubusercontent.com/JetBrains/intellij-community/idea/$VERSION/platform/platform-impl/src/com/intellij/ui/AppUIUtil.java > AppUIUtil.java.original
@@ -11,21 +11,20 @@ TARGET=../../../../target
 #diff -u StartupUtil.java.original StartupUtil.java > StartupUtil.java.patch
 
 rm -rf $TARGET/lib
-unzip $TARGET/repository/ideaIC-222.4459.24.zip lib/\* -d $TARGET
+unzip $TARGET/repository/ideaIC-$VERSION.zip lib/\* -d $TARGET
 
-curl -O https://raw.githubusercontent.com/JetBrains/intellij-community/idea/$VERSION/platform/platform-impl/src/com/intellij/ui/AppUIUtil.java
-curl -O https://raw.githubusercontent.com/JetBrains/intellij-community/idea/$VERSION/platform/platform-impl/src/com/intellij/idea/StartupUtil.java
+#curl -O https://raw.githubusercontent.com/JetBrains/intellij-community/idea/$VERSION/platform/platform-impl/src/com/intellij/ui/AppUIUtil.java
+#curl -O https://raw.githubusercontent.com/JetBrains/intellij-community/idea/$VERSION/platform/platform-impl/src/com/intellij/idea/StartupUtil.java
 
-patch AppUIUtil.java AppUIUtil.java.patch
-patch StartupUtil.java StartupUtil.java.patch
+#patch AppUIUtil.java AppUIUtil.java.patch
+#patch StartupUtil.java StartupUtil.java.patch
 
-javac -g:vars -cp $TARGET/lib/\* -target 17 *.java
+javac -g:vars -cp $TARGET/lib/\* --add-exports=java.desktop/sun.awt=ALL-UNNAMED -target 17 AppUIUtil.java
 
-rm StartupUtil\$*.class
+#rm StartupUtil\$*.class
 
 #rm AppUIUtil.java
 #rm StartupUtil.java
-
 rm -rf $TARGET/lib
 
 echo Done.
